// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DomainExplorerPage component Check error response for getPicker query 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <Memo()
    domains={
      Array [
        "Travels",
        "VisaApplications",
      ]
    }
    history={Object {}}
    loadingState={false}
    location={
      Object {
        "pathname": "/DomainExplorer/Travels",
        "state": Object {
          "parameters": Array [
            Object {
              "flight": Array [
                "arrival",
              ],
            },
            Object {
              "flight": Array [
                "departure",
              ],
            },
          ],
        },
      }
    }
    match={
      Object {
        "params": Object {
          "domainName": "Travels",
        },
      }
    }
  />
</Router>
`;

exports[`DomainExplorerPage component Check error response for getQueryFields query 1`] = `
<DomainExplorerPage
  domains={
    Array [
      "Travels",
      "VisaApplications",
    ]
  }
  history={Object {}}
  loadingState={false}
  location={
    Object {
      "pathname": "/DomainExplorer/Travels",
      "state": Object {
        "parameters": Array [
          Object {
            "flight": Array [
              "arrival",
            ],
          },
          Object {
            "flight": Array [
              "departure",
            ],
          },
        ],
      },
    }
  }
  match={
    Object {
      "params": Object {
        "domainName": "Travels",
      },
    }
  }
  ouiaContext={
    Object {
      "isOuia": false,
      "ouiaId": null,
    }
  }
>
  <PageSection
    variant="light"
  >
    <section
      className="pf-c-page__main-section pf-m-light"
    >
      <PageTitle
        title="Domain Explorer"
      >
        <Title
          headingLevel="h1"
          size="4xl"
        >
          <h1
            className="pf-c-title pf-m-4xl"
          >
            Domain Explorer
          </h1>
        </Title>
      </PageTitle>
      <Component>
        <ComponentWithOuia
          component={[Function]}
          componentProps={
            Object {
              "children": Array [
                <BreadcrumbItem>
                  <Link
                    to="/"
                  >
                    Home
                  </Link>
                </BreadcrumbItem>,
                Array [
                  <BreadcrumbItem>
                    <Link
                      to="/DomainExplorer"
                    >
                      Domain Explorer
                    </Link>
                  </BreadcrumbItem>,
                  <BreadcrumbItem
                    isActive={true}
                  >
                    Travels
                  </BreadcrumbItem>,
                ],
              ],
            }
          }
          consumerContext={
            Object {
              "isOuia": false,
              "ouiaId": null,
            }
          }
        >
          <Breadcrumb
            ouiaContext={
              Object {
                "isOuia": false,
                "ouiaId": null,
              }
            }
          >
            <nav
              aria-label="Breadcrumb"
              className="pf-c-breadcrumb"
            >
              <ol
                className="pf-c-breadcrumb__list"
              >
                <BreadcrumbItem>
                  <li
                    className="pf-c-breadcrumb__item"
                  >
                    <Link
                      to="/"
                    >
                      <LinkAnchor
                        href="/"
                        navigate={[Function]}
                      >
                        <a
                          href="/"
                          onClick={[Function]}
                        >
                          Home
                        </a>
                      </LinkAnchor>
                    </Link>
                    <span
                      className="pf-c-breadcrumb__item-divider"
                    >
                      <AngleRightIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                        title={null}
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 256 512"
                          width="1em"
                        >
                          <path
                            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                            transform=""
                          />
                        </svg>
                      </AngleRightIcon>
                    </span>
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  key="0"
                >
                  <li
                    className="pf-c-breadcrumb__item"
                  >
                    <Link
                      to="/DomainExplorer"
                    >
                      <LinkAnchor
                        href="/DomainExplorer"
                        navigate={[Function]}
                      >
                        <a
                          href="/DomainExplorer"
                          onClick={[Function]}
                        >
                          Domain Explorer
                        </a>
                      </LinkAnchor>
                    </Link>
                    <span
                      className="pf-c-breadcrumb__item-divider"
                    >
                      <AngleRightIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                        title={null}
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 256 512"
                          width="1em"
                        >
                          <path
                            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                            transform=""
                          />
                        </svg>
                      </AngleRightIcon>
                    </span>
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  isActive={true}
                  key="1"
                >
                  <li
                    className="pf-c-breadcrumb__item"
                  >
                    Travels
                  </li>
                </BreadcrumbItem>
              </ol>
            </nav>
          </Breadcrumb>
        </ComponentWithOuia>
      </Component>
    </section>
  </PageSection>
  <PageSection>
    <section
      className="pf-c-page__main-section"
    >
      <DomainExplorer
        domainName="Travels"
        metaData={
          Object {
            "metadata": Array [
              Object {
                "processInstances": Array [
                  "id",
                  "processName",
                  "state",
                  "start",
                  "lastUpdate",
                  "businessKey",
                ],
              },
            ],
          }
        }
        rememberedParams={
          Array [
            Object {
              "flight": Array [
                "arrival",
              ],
            },
            Object {
              "flight": Array [
                "departure",
              ],
            },
          ]
        }
        rememberedSelections={Array []}
      >
        <DataToolbar
          className="pf-m-toggle-group-container"
          collapseListedFiltersBreakpoint="md"
          id="data-toolbar-with-chip-groups"
        >
          <div
            className="pf-c-data-toolbar pf-m-toggle-group-container"
            id="data-toolbar-with-chip-groups"
          >
            <DataToolbarContent
              breakpointMods={Array []}
              isExpanded={false}
              key=".0"
              showClearFiltersButton={false}
              toolbarId="data-toolbar-with-chip-groups"
            >
              <div
                className="pf-c-data-toolbar__content"
              >
                <div
                  className="pf-c-data-toolbar__content-section"
                >
                  <DataToolbarToggleGroup
                    breakpoint="md"
                    breakpointMods={Array []}
                    toggleIcon={
                      <FilterIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                        title={null}
                      />
                    }
                  >
                    <div
                      className="pf-c-data-toolbar__group pf-m-toggle-group pf-m-show-on-md"
                    >
                      <div
                        className="pf-c-data-toolbar__toggle"
                      >
                        <Component
                          aria-controls="data-toolbar-with-chip-groups-expandable-content-3"
                          aria-haspopup={false}
                          aria-label="Show Filters"
                          onClick={[Function]}
                          variant="plain"
                        >
                          <ComponentWithOuia
                            component={[Function]}
                            componentProps={
                              Object {
                                "aria-controls": "data-toolbar-with-chip-groups-expandable-content-3",
                                "aria-haspopup": false,
                                "aria-label": "Show Filters",
                                "children": <FilterIcon
                                  color="currentColor"
                                  noVerticalAlign={false}
                                  size="sm"
                                  title={null}
                                />,
                                "onClick": [Function],
                                "variant": "plain",
                              }
                            }
                            consumerContext={
                              Object {
                                "isOuia": false,
                                "ouiaId": null,
                              }
                            }
                          >
                            <Button
                              aria-controls="data-toolbar-with-chip-groups-expandable-content-3"
                              aria-haspopup={false}
                              aria-label="Show Filters"
                              onClick={[Function]}
                              ouiaContext={
                                Object {
                                  "isOuia": false,
                                  "ouiaId": null,
                                }
                              }
                              variant="plain"
                            >
                              <button
                                aria-controls="data-toolbar-with-chip-groups-expandable-content-3"
                                aria-disabled={null}
                                aria-haspopup={false}
                                aria-label="Show Filters"
                                className="pf-c-button pf-m-plain"
                                disabled={false}
                                onClick={[Function]}
                                tabIndex={null}
                                type="button"
                              >
                                <FilterIcon
                                  color="currentColor"
                                  noVerticalAlign={false}
                                  size="sm"
                                  title={null}
                                >
                                  <svg
                                    aria-hidden={true}
                                    aria-labelledby={null}
                                    fill="currentColor"
                                    height="1em"
                                    role="img"
                                    style={
                                      Object {
                                        "verticalAlign": "-0.125em",
                                      }
                                    }
                                    viewBox="0 0 512 512"
                                    width="1em"
                                  >
                                    <path
                                      d="M487.976 0H24.028C2.71 0-8.047 25.866 7.058 40.971L192 225.941V432c0 7.831 3.821 15.17 10.237 19.662l80 55.98C298.02 518.69 320 507.493 320 487.98V225.941l184.947-184.97C520.021 25.896 509.338 0 487.976 0z"
                                      transform=""
                                    />
                                  </svg>
                                </FilterIcon>
                              </button>
                            </Button>
                          </ComponentWithOuia>
                        </Component>
                      </div>
                      <ForwardRef>
                        <DataToolbarGroupWithRef
                          breakpointMods={Array []}
                          innerRef={null}
                        >
                          <div
                            className="pf-c-data-toolbar__group"
                          />
                        </DataToolbarGroupWithRef>
                      </ForwardRef>
                    </div>
                  </DataToolbarToggleGroup>
                </div>
                <DataToolbarExpandableContent
                  chipContainerRef={
                    Object {
                      "current": null,
                    }
                  }
                  clearFiltersButtonText="Clear all filters"
                  expandableContentRef={
                    Object {
                      "current": <div
                        class="pf-c-data-toolbar__expandable-content"
                        id="data-toolbar-with-chip-groups-expandable-content-3"
                      >
                        <div
                          class="pf-c-data-toolbar__group"
                        />
                      </div>,
                    }
                  }
                  id="data-toolbar-with-chip-groups-expandable-content-3"
                  isExpanded={false}
                  showClearFiltersButton={false}
                >
                  <div
                    className="pf-c-data-toolbar__expandable-content"
                    id="data-toolbar-with-chip-groups-expandable-content-3"
                  >
                    <ForwardRef>
                      <DataToolbarGroupWithRef
                        breakpointMods={Array []}
                        innerRef={null}
                      >
                        <div
                          className="pf-c-data-toolbar__group"
                        />
                      </DataToolbarGroupWithRef>
                    </ForwardRef>
                  </div>
                </DataToolbarExpandableContent>
              </div>
            </DataToolbarContent>
            <DataToolbarChipGroupContent
              chipGroupContentRef={
                Object {
                  "current": <div
                    class="pf-c-data-toolbar__content pf-m-hidden"
                    hidden=""
                  >
                    <div
                      class="pf-c-data-toolbar__group"
                    />
                  </div>,
                }
              }
              clearFiltersButtonText="Clear all filters"
              collapseListedFiltersBreakpoint="md"
              isExpanded={false}
              numberOfFilters={0}
              showClearFiltersButton={false}
            >
              <div
                className="pf-c-data-toolbar__content pf-m-hidden"
                hidden={true}
              >
                <ForwardRef
                  className=""
                >
                  <DataToolbarGroupWithRef
                    breakpointMods={Array []}
                    className=""
                    innerRef={null}
                  >
                    <div
                      className="pf-c-data-toolbar__group"
                    />
                  </DataToolbarGroupWithRef>
                </ForwardRef>
              </div>
            </DataToolbarChipGroupContent>
          </div>
        </DataToolbar>
        <Card>
          <article
            className="pf-c-card"
          >
            <Bullseye>
              <div
                className="pf-l-bullseye"
              >
                <KogitoSpinner
                  spinnerText="Loading domain data..."
                >
                  <EmptyState>
                    <div
                      className="pf-c-empty-state pf-m-lg"
                    >
                      <EmptyStateIcon
                        component={[Function]}
                        variant="container"
                      >
                        <div
                          className="pf-c-empty-state__icon"
                        >
                          <Spinner>
                            <span
                              aria-valuetext="Loading..."
                              className="pf-c-spinner pf-m-xl"
                              role="progressbar"
                            >
                              <span
                                className="pf-c-spinner__clipper"
                              />
                              <span
                                className="pf-c-spinner__lead-ball"
                              />
                              <span
                                className="pf-c-spinner__tail-ball"
                              />
                            </span>
                          </Spinner>
                        </div>
                      </EmptyStateIcon>
                      <Title
                        size="lg"
                      >
                        <h1
                          className="pf-c-title pf-m-lg"
                        >
                          Loading domain data...
                        </h1>
                      </Title>
                    </div>
                  </EmptyState>
                </KogitoSpinner>
              </div>
            </Bullseye>
          </article>
        </Card>
      </DomainExplorer>
    </section>
  </PageSection>
</DomainExplorerPage>
`;

exports[`DomainExplorerPage component Check error response for getQueryTypes 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <Memo()
    domains={
      Array [
        "Travels",
        "VisaApplications",
      ]
    }
    history={Object {}}
    loadingState={false}
    location={
      Object {
        "pathname": "/DomainExplorer/Travels",
        "state": Object {
          "parameters": Array [
            Object {
              "flight": Array [
                "arrival",
              ],
            },
            Object {
              "flight": Array [
                "departure",
              ],
            },
          ],
        },
      }
    }
    match={
      Object {
        "params": Object {
          "domainName": "Travels",
        },
      }
    }
  />
</Router>
`;

exports[`DomainExplorerPage component Mock query testing 1`] = `
<DomainExplorerPage
  domains={
    Array [
      "Travels",
      "VisaApplications",
    ]
  }
  history={Object {}}
  loadingState={false}
  location={
    Object {
      "pathname": "/DomainExplorer/Travels",
      "state": Object {
        "parameters": Array [
          Object {
            "flight": Array [
              "arrival",
            ],
          },
          Object {
            "flight": Array [
              "departure",
            ],
          },
        ],
      },
    }
  }
  match={
    Object {
      "params": Object {
        "domainName": "Travels",
      },
    }
  }
  ouiaContext={
    Object {
      "isOuia": false,
      "ouiaId": null,
    }
  }
>
  <PageSection
    variant="light"
  >
    <section
      className="pf-c-page__main-section pf-m-light"
    >
      <PageTitle
        title="Domain Explorer"
      >
        <Title
          headingLevel="h1"
          size="4xl"
        >
          <h1
            className="pf-c-title pf-m-4xl"
          >
            Domain Explorer
          </h1>
        </Title>
      </PageTitle>
      <Component>
        <ComponentWithOuia
          component={[Function]}
          componentProps={
            Object {
              "children": Array [
                <BreadcrumbItem>
                  <Link
                    to="/"
                  >
                    Home
                  </Link>
                </BreadcrumbItem>,
                Array [
                  <BreadcrumbItem>
                    <Link
                      to="/DomainExplorer"
                    >
                      Domain Explorer
                    </Link>
                  </BreadcrumbItem>,
                  <BreadcrumbItem
                    isActive={true}
                  >
                    Travels
                  </BreadcrumbItem>,
                ],
              ],
            }
          }
          consumerContext={
            Object {
              "isOuia": false,
              "ouiaId": null,
            }
          }
        >
          <Breadcrumb
            ouiaContext={
              Object {
                "isOuia": false,
                "ouiaId": null,
              }
            }
          >
            <nav
              aria-label="Breadcrumb"
              className="pf-c-breadcrumb"
            >
              <ol
                className="pf-c-breadcrumb__list"
              >
                <BreadcrumbItem>
                  <li
                    className="pf-c-breadcrumb__item"
                  >
                    <Link
                      to="/"
                    >
                      <LinkAnchor
                        href="/"
                        navigate={[Function]}
                      >
                        <a
                          href="/"
                          onClick={[Function]}
                        >
                          Home
                        </a>
                      </LinkAnchor>
                    </Link>
                    <span
                      className="pf-c-breadcrumb__item-divider"
                    >
                      <AngleRightIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                        title={null}
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 256 512"
                          width="1em"
                        >
                          <path
                            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                            transform=""
                          />
                        </svg>
                      </AngleRightIcon>
                    </span>
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  key="0"
                >
                  <li
                    className="pf-c-breadcrumb__item"
                  >
                    <Link
                      to="/DomainExplorer"
                    >
                      <LinkAnchor
                        href="/DomainExplorer"
                        navigate={[Function]}
                      >
                        <a
                          href="/DomainExplorer"
                          onClick={[Function]}
                        >
                          Domain Explorer
                        </a>
                      </LinkAnchor>
                    </Link>
                    <span
                      className="pf-c-breadcrumb__item-divider"
                    >
                      <AngleRightIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                        title={null}
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 256 512"
                          width="1em"
                        >
                          <path
                            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                            transform=""
                          />
                        </svg>
                      </AngleRightIcon>
                    </span>
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  isActive={true}
                  key="1"
                >
                  <li
                    className="pf-c-breadcrumb__item"
                  >
                    Travels
                  </li>
                </BreadcrumbItem>
              </ol>
            </nav>
          </Breadcrumb>
        </ComponentWithOuia>
      </Component>
    </section>
  </PageSection>
  <PageSection>
    <section
      className="pf-c-page__main-section"
    >
      <DomainExplorer
        domainName="Travels"
        metaData={
          Object {
            "metadata": Array [
              Object {
                "processInstances": Array [
                  "id",
                  "processName",
                  "state",
                  "start",
                  "lastUpdate",
                  "businessKey",
                ],
              },
            ],
          }
        }
        rememberedParams={
          Array [
            Object {
              "flight": Array [
                "arrival",
              ],
            },
            Object {
              "flight": Array [
                "departure",
              ],
            },
          ]
        }
        rememberedSelections={Array []}
      >
        <DataToolbar
          className="pf-m-toggle-group-container"
          collapseListedFiltersBreakpoint="md"
          id="data-toolbar-with-chip-groups"
        >
          <div
            className="pf-c-data-toolbar pf-m-toggle-group-container"
            id="data-toolbar-with-chip-groups"
          >
            <DataToolbarContent
              breakpointMods={Array []}
              isExpanded={false}
              key=".0"
              showClearFiltersButton={false}
              toolbarId="data-toolbar-with-chip-groups"
            >
              <div
                className="pf-c-data-toolbar__content"
              >
                <div
                  className="pf-c-data-toolbar__content-section"
                >
                  <DataToolbarToggleGroup
                    breakpoint="md"
                    breakpointMods={Array []}
                    toggleIcon={
                      <FilterIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                        title={null}
                      />
                    }
                  >
                    <div
                      className="pf-c-data-toolbar__group pf-m-toggle-group pf-m-show-on-md"
                    >
                      <div
                        className="pf-c-data-toolbar__toggle"
                      >
                        <Component
                          aria-controls="data-toolbar-with-chip-groups-expandable-content-5"
                          aria-haspopup={false}
                          aria-label="Show Filters"
                          onClick={[Function]}
                          variant="plain"
                        >
                          <ComponentWithOuia
                            component={[Function]}
                            componentProps={
                              Object {
                                "aria-controls": "data-toolbar-with-chip-groups-expandable-content-5",
                                "aria-haspopup": false,
                                "aria-label": "Show Filters",
                                "children": <FilterIcon
                                  color="currentColor"
                                  noVerticalAlign={false}
                                  size="sm"
                                  title={null}
                                />,
                                "onClick": [Function],
                                "variant": "plain",
                              }
                            }
                            consumerContext={
                              Object {
                                "isOuia": false,
                                "ouiaId": null,
                              }
                            }
                          >
                            <Button
                              aria-controls="data-toolbar-with-chip-groups-expandable-content-5"
                              aria-haspopup={false}
                              aria-label="Show Filters"
                              onClick={[Function]}
                              ouiaContext={
                                Object {
                                  "isOuia": false,
                                  "ouiaId": null,
                                }
                              }
                              variant="plain"
                            >
                              <button
                                aria-controls="data-toolbar-with-chip-groups-expandable-content-5"
                                aria-disabled={null}
                                aria-haspopup={false}
                                aria-label="Show Filters"
                                className="pf-c-button pf-m-plain"
                                disabled={false}
                                onClick={[Function]}
                                tabIndex={null}
                                type="button"
                              >
                                <FilterIcon
                                  color="currentColor"
                                  noVerticalAlign={false}
                                  size="sm"
                                  title={null}
                                >
                                  <svg
                                    aria-hidden={true}
                                    aria-labelledby={null}
                                    fill="currentColor"
                                    height="1em"
                                    role="img"
                                    style={
                                      Object {
                                        "verticalAlign": "-0.125em",
                                      }
                                    }
                                    viewBox="0 0 512 512"
                                    width="1em"
                                  >
                                    <path
                                      d="M487.976 0H24.028C2.71 0-8.047 25.866 7.058 40.971L192 225.941V432c0 7.831 3.821 15.17 10.237 19.662l80 55.98C298.02 518.69 320 507.493 320 487.98V225.941l184.947-184.97C520.021 25.896 509.338 0 487.976 0z"
                                      transform=""
                                    />
                                  </svg>
                                </FilterIcon>
                              </button>
                            </Button>
                          </ComponentWithOuia>
                        </Component>
                      </div>
                      <ForwardRef>
                        <DataToolbarGroupWithRef
                          breakpointMods={Array []}
                          innerRef={null}
                        >
                          <div
                            className="pf-c-data-toolbar__group"
                          />
                        </DataToolbarGroupWithRef>
                      </ForwardRef>
                    </div>
                  </DataToolbarToggleGroup>
                </div>
                <DataToolbarExpandableContent
                  chipContainerRef={
                    Object {
                      "current": null,
                    }
                  }
                  clearFiltersButtonText="Clear all filters"
                  expandableContentRef={
                    Object {
                      "current": <div
                        class="pf-c-data-toolbar__expandable-content"
                        id="data-toolbar-with-chip-groups-expandable-content-5"
                      >
                        <div
                          class="pf-c-data-toolbar__group"
                        />
                      </div>,
                    }
                  }
                  id="data-toolbar-with-chip-groups-expandable-content-5"
                  isExpanded={false}
                  showClearFiltersButton={false}
                >
                  <div
                    className="pf-c-data-toolbar__expandable-content"
                    id="data-toolbar-with-chip-groups-expandable-content-5"
                  >
                    <ForwardRef>
                      <DataToolbarGroupWithRef
                        breakpointMods={Array []}
                        innerRef={null}
                      >
                        <div
                          className="pf-c-data-toolbar__group"
                        />
                      </DataToolbarGroupWithRef>
                    </ForwardRef>
                  </div>
                </DataToolbarExpandableContent>
              </div>
            </DataToolbarContent>
            <DataToolbarChipGroupContent
              chipGroupContentRef={
                Object {
                  "current": <div
                    class="pf-c-data-toolbar__content pf-m-hidden"
                    hidden=""
                  >
                    <div
                      class="pf-c-data-toolbar__group"
                    />
                  </div>,
                }
              }
              clearFiltersButtonText="Clear all filters"
              collapseListedFiltersBreakpoint="md"
              isExpanded={false}
              numberOfFilters={0}
              showClearFiltersButton={false}
            >
              <div
                className="pf-c-data-toolbar__content pf-m-hidden"
                hidden={true}
              >
                <ForwardRef
                  className=""
                >
                  <DataToolbarGroupWithRef
                    breakpointMods={Array []}
                    className=""
                    innerRef={null}
                  >
                    <div
                      className="pf-c-data-toolbar__group"
                    />
                  </DataToolbarGroupWithRef>
                </ForwardRef>
              </div>
            </DataToolbarChipGroupContent>
          </div>
        </DataToolbar>
        <Card>
          <article
            className="pf-c-card"
          >
            <Bullseye>
              <div
                className="pf-l-bullseye"
              >
                <KogitoSpinner
                  spinnerText="Loading domain data..."
                >
                  <EmptyState>
                    <div
                      className="pf-c-empty-state pf-m-lg"
                    >
                      <EmptyStateIcon
                        component={[Function]}
                        variant="container"
                      >
                        <div
                          className="pf-c-empty-state__icon"
                        >
                          <Spinner>
                            <span
                              aria-valuetext="Loading..."
                              className="pf-c-spinner pf-m-xl"
                              role="progressbar"
                            >
                              <span
                                className="pf-c-spinner__clipper"
                              />
                              <span
                                className="pf-c-spinner__lead-ball"
                              />
                              <span
                                className="pf-c-spinner__tail-ball"
                              />
                            </span>
                          </Spinner>
                        </div>
                      </EmptyStateIcon>
                      <Title
                        size="lg"
                      >
                        <h1
                          className="pf-c-title pf-m-lg"
                        >
                          Loading domain data...
                        </h1>
                      </Title>
                    </div>
                  </EmptyState>
                </KogitoSpinner>
              </div>
            </Bullseye>
          </article>
        </Card>
      </DomainExplorer>
    </section>
  </PageSection>
</DomainExplorerPage>
`;

exports[`DomainExplorerPage component Snapshot with default props 1`] = `
<DomainExplorerPage
  domains={
    Array [
      "Travels",
      "VisaApplications",
    ]
  }
  history={Object {}}
  loadingState={false}
  location={
    Object {
      "pathname": "/DomainExplorer/Travels",
      "state": Object {
        "parameters": Array [
          Object {
            "flight": Array [
              "arrival",
            ],
          },
          Object {
            "flight": Array [
              "departure",
            ],
          },
        ],
      },
    }
  }
  match={
    Object {
      "params": Object {
        "domainName": "Travels",
      },
    }
  }
  ouiaContext={
    Object {
      "isOuia": false,
      "ouiaId": null,
    }
  }
>
  <PageSection
    variant="light"
  >
    <section
      className="pf-c-page__main-section pf-m-light"
    >
      <PageTitle
        title="Domain Explorer"
      >
        <Title
          headingLevel="h1"
          size="4xl"
        >
          <h1
            className="pf-c-title pf-m-4xl"
          >
            Domain Explorer
          </h1>
        </Title>
      </PageTitle>
      <Component>
        <ComponentWithOuia
          component={[Function]}
          componentProps={
            Object {
              "children": Array [
                <BreadcrumbItem>
                  <Link
                    to="/"
                  >
                    Home
                  </Link>
                </BreadcrumbItem>,
                Array [
                  <BreadcrumbItem>
                    <Link
                      to="/DomainExplorer"
                    >
                      Domain Explorer
                    </Link>
                  </BreadcrumbItem>,
                  <BreadcrumbItem
                    isActive={true}
                  >
                    Travels
                  </BreadcrumbItem>,
                ],
              ],
            }
          }
          consumerContext={
            Object {
              "isOuia": false,
              "ouiaId": null,
            }
          }
        >
          <Breadcrumb
            ouiaContext={
              Object {
                "isOuia": false,
                "ouiaId": null,
              }
            }
          >
            <nav
              aria-label="Breadcrumb"
              className="pf-c-breadcrumb"
            >
              <ol
                className="pf-c-breadcrumb__list"
              >
                <BreadcrumbItem>
                  <li
                    className="pf-c-breadcrumb__item"
                  >
                    <Link
                      to="/"
                    >
                      <LinkAnchor
                        href="/"
                        navigate={[Function]}
                      >
                        <a
                          href="/"
                          onClick={[Function]}
                        >
                          Home
                        </a>
                      </LinkAnchor>
                    </Link>
                    <span
                      className="pf-c-breadcrumb__item-divider"
                    >
                      <AngleRightIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                        title={null}
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 256 512"
                          width="1em"
                        >
                          <path
                            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                            transform=""
                          />
                        </svg>
                      </AngleRightIcon>
                    </span>
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  key="0"
                >
                  <li
                    className="pf-c-breadcrumb__item"
                  >
                    <Link
                      to="/DomainExplorer"
                    >
                      <LinkAnchor
                        href="/DomainExplorer"
                        navigate={[Function]}
                      >
                        <a
                          href="/DomainExplorer"
                          onClick={[Function]}
                        >
                          Domain Explorer
                        </a>
                      </LinkAnchor>
                    </Link>
                    <span
                      className="pf-c-breadcrumb__item-divider"
                    >
                      <AngleRightIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                        title={null}
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 256 512"
                          width="1em"
                        >
                          <path
                            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                            transform=""
                          />
                        </svg>
                      </AngleRightIcon>
                    </span>
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  isActive={true}
                  key="1"
                >
                  <li
                    className="pf-c-breadcrumb__item"
                  >
                    Travels
                  </li>
                </BreadcrumbItem>
              </ol>
            </nav>
          </Breadcrumb>
        </ComponentWithOuia>
      </Component>
    </section>
  </PageSection>
  <PageSection>
    <section
      className="pf-c-page__main-section"
    >
      <DomainExplorer
        domainName="Travels"
        metaData={
          Object {
            "metadata": Array [
              Object {
                "processInstances": Array [
                  "id",
                  "processName",
                  "state",
                  "start",
                  "lastUpdate",
                  "businessKey",
                ],
              },
            ],
          }
        }
        rememberedParams={
          Array [
            Object {
              "flight": Array [
                "arrival",
              ],
            },
            Object {
              "flight": Array [
                "departure",
              ],
            },
          ]
        }
        rememberedSelections={Array []}
      >
        <DataToolbar
          className="pf-m-toggle-group-container"
          collapseListedFiltersBreakpoint="md"
          id="data-toolbar-with-chip-groups"
        >
          <div
            className="pf-c-data-toolbar pf-m-toggle-group-container"
            id="data-toolbar-with-chip-groups"
          >
            <DataToolbarContent
              breakpointMods={Array []}
              isExpanded={false}
              key=".0"
              showClearFiltersButton={false}
              toolbarId="data-toolbar-with-chip-groups"
            >
              <div
                className="pf-c-data-toolbar__content"
              >
                <div
                  className="pf-c-data-toolbar__content-section"
                >
                  <DataToolbarToggleGroup
                    breakpoint="md"
                    breakpointMods={Array []}
                    toggleIcon={
                      <FilterIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                        title={null}
                      />
                    }
                  >
                    <div
                      className="pf-c-data-toolbar__group pf-m-toggle-group pf-m-show-on-md"
                    >
                      <div
                        className="pf-c-data-toolbar__toggle"
                      >
                        <Component
                          aria-controls="data-toolbar-with-chip-groups-expandable-content-1"
                          aria-haspopup={false}
                          aria-label="Show Filters"
                          onClick={[Function]}
                          variant="plain"
                        >
                          <ComponentWithOuia
                            component={[Function]}
                            componentProps={
                              Object {
                                "aria-controls": "data-toolbar-with-chip-groups-expandable-content-1",
                                "aria-haspopup": false,
                                "aria-label": "Show Filters",
                                "children": <FilterIcon
                                  color="currentColor"
                                  noVerticalAlign={false}
                                  size="sm"
                                  title={null}
                                />,
                                "onClick": [Function],
                                "variant": "plain",
                              }
                            }
                            consumerContext={
                              Object {
                                "isOuia": false,
                                "ouiaId": null,
                              }
                            }
                          >
                            <Button
                              aria-controls="data-toolbar-with-chip-groups-expandable-content-1"
                              aria-haspopup={false}
                              aria-label="Show Filters"
                              onClick={[Function]}
                              ouiaContext={
                                Object {
                                  "isOuia": false,
                                  "ouiaId": null,
                                }
                              }
                              variant="plain"
                            >
                              <button
                                aria-controls="data-toolbar-with-chip-groups-expandable-content-1"
                                aria-disabled={null}
                                aria-haspopup={false}
                                aria-label="Show Filters"
                                className="pf-c-button pf-m-plain"
                                disabled={false}
                                onClick={[Function]}
                                tabIndex={null}
                                type="button"
                              >
                                <FilterIcon
                                  color="currentColor"
                                  noVerticalAlign={false}
                                  size="sm"
                                  title={null}
                                >
                                  <svg
                                    aria-hidden={true}
                                    aria-labelledby={null}
                                    fill="currentColor"
                                    height="1em"
                                    role="img"
                                    style={
                                      Object {
                                        "verticalAlign": "-0.125em",
                                      }
                                    }
                                    viewBox="0 0 512 512"
                                    width="1em"
                                  >
                                    <path
                                      d="M487.976 0H24.028C2.71 0-8.047 25.866 7.058 40.971L192 225.941V432c0 7.831 3.821 15.17 10.237 19.662l80 55.98C298.02 518.69 320 507.493 320 487.98V225.941l184.947-184.97C520.021 25.896 509.338 0 487.976 0z"
                                      transform=""
                                    />
                                  </svg>
                                </FilterIcon>
                              </button>
                            </Button>
                          </ComponentWithOuia>
                        </Component>
                      </div>
                      <ForwardRef>
                        <DataToolbarGroupWithRef
                          breakpointMods={Array []}
                          innerRef={null}
                        >
                          <div
                            className="pf-c-data-toolbar__group"
                          />
                        </DataToolbarGroupWithRef>
                      </ForwardRef>
                    </div>
                  </DataToolbarToggleGroup>
                </div>
                <DataToolbarExpandableContent
                  chipContainerRef={
                    Object {
                      "current": null,
                    }
                  }
                  clearFiltersButtonText="Clear all filters"
                  expandableContentRef={
                    Object {
                      "current": <div
                        class="pf-c-data-toolbar__expandable-content"
                        id="data-toolbar-with-chip-groups-expandable-content-1"
                      >
                        <div
                          class="pf-c-data-toolbar__group"
                        />
                      </div>,
                    }
                  }
                  id="data-toolbar-with-chip-groups-expandable-content-1"
                  isExpanded={false}
                  showClearFiltersButton={false}
                >
                  <div
                    className="pf-c-data-toolbar__expandable-content"
                    id="data-toolbar-with-chip-groups-expandable-content-1"
                  >
                    <ForwardRef>
                      <DataToolbarGroupWithRef
                        breakpointMods={Array []}
                        innerRef={null}
                      >
                        <div
                          className="pf-c-data-toolbar__group"
                        />
                      </DataToolbarGroupWithRef>
                    </ForwardRef>
                  </div>
                </DataToolbarExpandableContent>
              </div>
            </DataToolbarContent>
            <DataToolbarChipGroupContent
              chipGroupContentRef={
                Object {
                  "current": <div
                    class="pf-c-data-toolbar__content pf-m-hidden"
                    hidden=""
                  >
                    <div
                      class="pf-c-data-toolbar__group"
                    />
                  </div>,
                }
              }
              clearFiltersButtonText="Clear all filters"
              collapseListedFiltersBreakpoint="md"
              isExpanded={false}
              numberOfFilters={0}
              showClearFiltersButton={false}
            >
              <div
                className="pf-c-data-toolbar__content pf-m-hidden"
                hidden={true}
              >
                <ForwardRef
                  className=""
                >
                  <DataToolbarGroupWithRef
                    breakpointMods={Array []}
                    className=""
                    innerRef={null}
                  >
                    <div
                      className="pf-c-data-toolbar__group"
                    />
                  </DataToolbarGroupWithRef>
                </ForwardRef>
              </div>
            </DataToolbarChipGroupContent>
          </div>
        </DataToolbar>
        <Card>
          <article
            className="pf-c-card"
          >
            <Bullseye>
              <div
                className="pf-l-bullseye"
              >
                <KogitoSpinner
                  spinnerText="Loading domain data..."
                >
                  <EmptyState>
                    <div
                      className="pf-c-empty-state pf-m-lg"
                    >
                      <EmptyStateIcon
                        component={[Function]}
                        variant="container"
                      >
                        <div
                          className="pf-c-empty-state__icon"
                        >
                          <Spinner>
                            <span
                              aria-valuetext="Loading..."
                              className="pf-c-spinner pf-m-xl"
                              role="progressbar"
                            >
                              <span
                                className="pf-c-spinner__clipper"
                              />
                              <span
                                className="pf-c-spinner__lead-ball"
                              />
                              <span
                                className="pf-c-spinner__tail-ball"
                              />
                            </span>
                          </Spinner>
                        </div>
                      </EmptyStateIcon>
                      <Title
                        size="lg"
                      >
                        <h1
                          className="pf-c-title pf-m-lg"
                        >
                          Loading domain data...
                        </h1>
                      </Title>
                    </div>
                  </EmptyState>
                </KogitoSpinner>
              </div>
            </Bullseye>
          </article>
        </Card>
      </DomainExplorer>
    </section>
  </PageSection>
</DomainExplorerPage>
`;

exports[`DomainExplorerPage component check assertions on rememberedParams 1`] = `
<DomainExplorerPage
  domains={
    Array [
      "Travels",
      "VisaApplications",
    ]
  }
  history={Object {}}
  loadingState={false}
  location={
    Object {
      "pathname": "/DomainExplorer/Travels",
      "state": Object {},
    }
  }
  match={
    Object {
      "params": Object {
        "domainName": "Travels",
      },
    }
  }
  ouiaContext={
    Object {
      "isOuia": false,
      "ouiaId": null,
    }
  }
>
  <PageSection
    variant="light"
  >
    <section
      className="pf-c-page__main-section pf-m-light"
    >
      <PageTitle
        title="Domain Explorer"
      >
        <Title
          headingLevel="h1"
          size="4xl"
        >
          <h1
            className="pf-c-title pf-m-4xl"
          >
            Domain Explorer
          </h1>
        </Title>
      </PageTitle>
      <Component>
        <ComponentWithOuia
          component={[Function]}
          componentProps={
            Object {
              "children": Array [
                <BreadcrumbItem>
                  <Link
                    to="/"
                  >
                    Home
                  </Link>
                </BreadcrumbItem>,
                Array [
                  <BreadcrumbItem>
                    <Link
                      to="/DomainExplorer"
                    >
                      Domain Explorer
                    </Link>
                  </BreadcrumbItem>,
                  <BreadcrumbItem
                    isActive={true}
                  >
                    Travels
                  </BreadcrumbItem>,
                ],
              ],
            }
          }
          consumerContext={
            Object {
              "isOuia": false,
              "ouiaId": null,
            }
          }
        >
          <Breadcrumb
            ouiaContext={
              Object {
                "isOuia": false,
                "ouiaId": null,
              }
            }
          >
            <nav
              aria-label="Breadcrumb"
              className="pf-c-breadcrumb"
            >
              <ol
                className="pf-c-breadcrumb__list"
              >
                <BreadcrumbItem>
                  <li
                    className="pf-c-breadcrumb__item"
                  >
                    <Link
                      to="/"
                    >
                      <LinkAnchor
                        href="/"
                        navigate={[Function]}
                      >
                        <a
                          href="/"
                          onClick={[Function]}
                        >
                          Home
                        </a>
                      </LinkAnchor>
                    </Link>
                    <span
                      className="pf-c-breadcrumb__item-divider"
                    >
                      <AngleRightIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                        title={null}
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 256 512"
                          width="1em"
                        >
                          <path
                            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                            transform=""
                          />
                        </svg>
                      </AngleRightIcon>
                    </span>
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  key="0"
                >
                  <li
                    className="pf-c-breadcrumb__item"
                  >
                    <Link
                      to="/DomainExplorer"
                    >
                      <LinkAnchor
                        href="/DomainExplorer"
                        navigate={[Function]}
                      >
                        <a
                          href="/DomainExplorer"
                          onClick={[Function]}
                        >
                          Domain Explorer
                        </a>
                      </LinkAnchor>
                    </Link>
                    <span
                      className="pf-c-breadcrumb__item-divider"
                    >
                      <AngleRightIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                        title={null}
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 256 512"
                          width="1em"
                        >
                          <path
                            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                            transform=""
                          />
                        </svg>
                      </AngleRightIcon>
                    </span>
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  isActive={true}
                  key="1"
                >
                  <li
                    className="pf-c-breadcrumb__item"
                  >
                    Travels
                  </li>
                </BreadcrumbItem>
              </ol>
            </nav>
          </Breadcrumb>
        </ComponentWithOuia>
      </Component>
    </section>
  </PageSection>
  <PageSection>
    <section
      className="pf-c-page__main-section"
    >
      <DomainExplorer
        domainName="Travels"
        metaData={
          Object {
            "metadata": Array [
              Object {
                "processInstances": Array [
                  "id",
                  "processName",
                  "state",
                  "start",
                  "lastUpdate",
                  "businessKey",
                ],
              },
            ],
          }
        }
        rememberedParams={Array []}
        rememberedSelections={Array []}
      >
        <DataToolbar
          className="pf-m-toggle-group-container"
          collapseListedFiltersBreakpoint="md"
          id="data-toolbar-with-chip-groups"
        >
          <div
            className="pf-c-data-toolbar pf-m-toggle-group-container"
            id="data-toolbar-with-chip-groups"
          >
            <DataToolbarContent
              breakpointMods={Array []}
              isExpanded={false}
              key=".0"
              showClearFiltersButton={false}
              toolbarId="data-toolbar-with-chip-groups"
            >
              <div
                className="pf-c-data-toolbar__content"
              >
                <div
                  className="pf-c-data-toolbar__content-section"
                >
                  <DataToolbarToggleGroup
                    breakpoint="md"
                    breakpointMods={Array []}
                    toggleIcon={
                      <FilterIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                        title={null}
                      />
                    }
                  >
                    <div
                      className="pf-c-data-toolbar__group pf-m-toggle-group pf-m-show-on-md"
                    >
                      <div
                        className="pf-c-data-toolbar__toggle"
                      >
                        <Component
                          aria-controls="data-toolbar-with-chip-groups-expandable-content-8"
                          aria-haspopup={false}
                          aria-label="Show Filters"
                          onClick={[Function]}
                          variant="plain"
                        >
                          <ComponentWithOuia
                            component={[Function]}
                            componentProps={
                              Object {
                                "aria-controls": "data-toolbar-with-chip-groups-expandable-content-8",
                                "aria-haspopup": false,
                                "aria-label": "Show Filters",
                                "children": <FilterIcon
                                  color="currentColor"
                                  noVerticalAlign={false}
                                  size="sm"
                                  title={null}
                                />,
                                "onClick": [Function],
                                "variant": "plain",
                              }
                            }
                            consumerContext={
                              Object {
                                "isOuia": false,
                                "ouiaId": null,
                              }
                            }
                          >
                            <Button
                              aria-controls="data-toolbar-with-chip-groups-expandable-content-8"
                              aria-haspopup={false}
                              aria-label="Show Filters"
                              onClick={[Function]}
                              ouiaContext={
                                Object {
                                  "isOuia": false,
                                  "ouiaId": null,
                                }
                              }
                              variant="plain"
                            >
                              <button
                                aria-controls="data-toolbar-with-chip-groups-expandable-content-8"
                                aria-disabled={null}
                                aria-haspopup={false}
                                aria-label="Show Filters"
                                className="pf-c-button pf-m-plain"
                                disabled={false}
                                onClick={[Function]}
                                tabIndex={null}
                                type="button"
                              >
                                <FilterIcon
                                  color="currentColor"
                                  noVerticalAlign={false}
                                  size="sm"
                                  title={null}
                                >
                                  <svg
                                    aria-hidden={true}
                                    aria-labelledby={null}
                                    fill="currentColor"
                                    height="1em"
                                    role="img"
                                    style={
                                      Object {
                                        "verticalAlign": "-0.125em",
                                      }
                                    }
                                    viewBox="0 0 512 512"
                                    width="1em"
                                  >
                                    <path
                                      d="M487.976 0H24.028C2.71 0-8.047 25.866 7.058 40.971L192 225.941V432c0 7.831 3.821 15.17 10.237 19.662l80 55.98C298.02 518.69 320 507.493 320 487.98V225.941l184.947-184.97C520.021 25.896 509.338 0 487.976 0z"
                                      transform=""
                                    />
                                  </svg>
                                </FilterIcon>
                              </button>
                            </Button>
                          </ComponentWithOuia>
                        </Component>
                      </div>
                      <ForwardRef>
                        <DataToolbarGroupWithRef
                          breakpointMods={Array []}
                          innerRef={null}
                        >
                          <div
                            className="pf-c-data-toolbar__group"
                          />
                        </DataToolbarGroupWithRef>
                      </ForwardRef>
                    </div>
                  </DataToolbarToggleGroup>
                </div>
                <DataToolbarExpandableContent
                  chipContainerRef={
                    Object {
                      "current": null,
                    }
                  }
                  clearFiltersButtonText="Clear all filters"
                  expandableContentRef={
                    Object {
                      "current": <div
                        class="pf-c-data-toolbar__expandable-content"
                        id="data-toolbar-with-chip-groups-expandable-content-8"
                      >
                        <div
                          class="pf-c-data-toolbar__group"
                        />
                      </div>,
                    }
                  }
                  id="data-toolbar-with-chip-groups-expandable-content-8"
                  isExpanded={false}
                  showClearFiltersButton={false}
                >
                  <div
                    className="pf-c-data-toolbar__expandable-content"
                    id="data-toolbar-with-chip-groups-expandable-content-8"
                  >
                    <ForwardRef>
                      <DataToolbarGroupWithRef
                        breakpointMods={Array []}
                        innerRef={null}
                      >
                        <div
                          className="pf-c-data-toolbar__group"
                        />
                      </DataToolbarGroupWithRef>
                    </ForwardRef>
                  </div>
                </DataToolbarExpandableContent>
              </div>
            </DataToolbarContent>
            <DataToolbarChipGroupContent
              chipGroupContentRef={
                Object {
                  "current": <div
                    class="pf-c-data-toolbar__content pf-m-hidden"
                    hidden=""
                  >
                    <div
                      class="pf-c-data-toolbar__group"
                    />
                  </div>,
                }
              }
              clearFiltersButtonText="Clear all filters"
              collapseListedFiltersBreakpoint="md"
              isExpanded={false}
              numberOfFilters={0}
              showClearFiltersButton={false}
            >
              <div
                className="pf-c-data-toolbar__content pf-m-hidden"
                hidden={true}
              >
                <ForwardRef
                  className=""
                >
                  <DataToolbarGroupWithRef
                    breakpointMods={Array []}
                    className=""
                    innerRef={null}
                  >
                    <div
                      className="pf-c-data-toolbar__group"
                    />
                  </DataToolbarGroupWithRef>
                </ForwardRef>
              </div>
            </DataToolbarChipGroupContent>
          </div>
        </DataToolbar>
        <Card>
          <article
            className="pf-c-card"
          >
            <Bullseye>
              <div
                className="pf-l-bullseye"
              >
                <KogitoSpinner
                  spinnerText="Loading domain data..."
                >
                  <EmptyState>
                    <div
                      className="pf-c-empty-state pf-m-lg"
                    >
                      <EmptyStateIcon
                        component={[Function]}
                        variant="container"
                      >
                        <div
                          className="pf-c-empty-state__icon"
                        >
                          <Spinner>
                            <span
                              aria-valuetext="Loading..."
                              className="pf-c-spinner pf-m-xl"
                              role="progressbar"
                            >
                              <span
                                className="pf-c-spinner__clipper"
                              />
                              <span
                                className="pf-c-spinner__lead-ball"
                              />
                              <span
                                className="pf-c-spinner__tail-ball"
                              />
                            </span>
                          </Spinner>
                        </div>
                      </EmptyStateIcon>
                      <Title
                        size="lg"
                      >
                        <h1
                          className="pf-c-title pf-m-lg"
                        >
                          Loading domain data...
                        </h1>
                      </Title>
                    </div>
                  </EmptyState>
                </KogitoSpinner>
              </div>
            </Bullseye>
          </article>
        </Card>
      </DomainExplorer>
    </section>
  </PageSection>
</DomainExplorerPage>
`;
